--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <body>
         <!-- html -->
         <div class="hellow">
-            <span>안녕하세요. <b>유희봉</b>의 <b>포트폴리오</b>입니다.</span>
+            <span>안녕하세요.
+                <b>유희봉</b>의
+                <b>포트폴리오</b>입니다.</span>
         </div>
         <main id="main">
             <div class="open__canvas">
@@ -52,6 +54,7 @@
         <script src="index.js"></script>
         <script>
             (function () {
+                localStorage.clear();
                 scrollTo(0, 0);
             })();
         </script>
